# queues-challange

./: .gitignore  README.md  consume_from_mq.py  publish_to_mq.py  pyproject.toml  requirementes.txt
faulty_ocr/: Dockerfile  run.py
perform_ocr/: Dockerfile  run.py
pii_filter/: Dockerfile  run.py
tests/: async_publisher.py  docker-compose.yml  sync_publisher.py  test_integration.py  test_perform_ocr.py
