[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmaster"
version = "0.0.0"
description = "RabbitMQ setup for processing images and PII "
requires-python = ">=3.9"
license = {text = "Four Ur I Only"}
authors = [
    {email = "ian.skapin@gmail.com"},
]
classifiers = [
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    "Topic :: Software Development",
]

dependencies = [
    "pika==1.3.2"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "pytest-mock",
    "pytest-timeout",
    "pytest-asyncio",
    "pytest-docker",
]
